--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "slugify": "^1.6.6",
-    "xss": "^1.0.15"
+    "xss": "^1.0.15",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.11",
